# 17206-Zulin-Labs

Lab0/: CMakeLists.txt  Module1.cpp  Module1.h  Module2.cpp  Module2.h  Module3.cpp  Module3.h  main.cpp
Lab0b/: CMakeLists.txt  main.cpp  stringParser.h  wordCounter.cpp  wordCounter.h
Lab1/: CMakeLists.txt  Tests.cpp  Trit.cpp  Trit.h  main.cpp  triSet.cpp  triSet.h  tritSet.cpp  tritSet.h
Lab1/tritSet/: Trit.cpp  Trit.h  tritSet.cpp  tritSet.h
Lab2/: CMakeLists.txt  Calc.cpp  Calc.h  CommandExceptions.h  CommandExeptions.h  Parser.cpp  Parser.h  basicCommands.cpp  basicCommands.h  basicCreators.h  basicInterface.h  cmdFactory.h  creators.cpp  creators.h  main.cpp
Lab3/: Battleships.cpp  Battleships.h  Board.cpp  Board.h  CMakeLists.txt  GameView.h  Gamer.h  main.cpp
Lab3/GamerTypes/: ConsoleGamer.cpp  ConsoleGamer.h  GamerFactory.cpp  GamerFactory.h  OptimalGamer.cpp  OptimalGamer.h  RandomGamer.cpp  RandomGamer.h
Lab3/ViewTypes/: ConsoleView.cpp  ConsoleView.h
Lab3/externalLib/: optionparser.h
Lab4/: CMakeLists.txt  csvParser.h  main.cpp  parserExceptions.h  tuplePrinter.h
